fix add button and flex alignment

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
 	flex-flow: row wrap;
 	justify-content: space-between;
 	align-content: center;
-	align-items: center;
 }
 
 .flex-start {
